feat: 챕터 9 테스트 예제 코드 작성

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 chapter4/node_modules
 chapter3/node_modules
+chapter5/node_modules
+chapter6/node_modules
+chapter7/node_modules
+chapter8/node_modules
+chapter9/node_modules
+chapter10/node_modules
+chapter11/node_modules
+chapter12/node_modules
+chapter13/node_modules
+chapter14/node_modules
+chapter15/node_modules
