chore: 빌드타임 프로세스 직접확인

--- a/.github/workflows/chapter9.yaml
+++ b/.github/workflows/chapter9.yaml
@@ -38,4 +38,4 @@ jobs:
       - name: Run Storycap
         run: npm run vrt:snapshot
       - name: Run reg-suit
-        run: npm run vrt:run
+        run: echo "REG_NOTIFY_CLIENT_ID: $REG_NOTIFY_CLIENT_ID" && npm run vrt:run
