--- a/.github/workflows/chapter9.yaml
+++ b/.github/workflows/chapter9.yaml
@@ -38,4 +38,4 @@ jobs:
       - name: Run Storycap
         run: npm run vrt:snapshot
       - name: Run reg-suit
-        run: echo "REG_NOTIFY_CLIENT_ID: $REG_NOTIFY_CLIENT_ID" && npm run vrt:run
+        run: echo $TESTCODE_REG_NOTIFY_CLIENT_ID && npm run vrt:run
