chore: 브랜치 트리거 되도록 빌드설정 수정

--- a/.github/workflows/chapter9.yaml
+++ b/.github/workflows/chapter9.yaml
@@ -2,9 +2,13 @@ name: Run VRT
 
 on:
   push:
+    branches:
+      - "test/**"
     paths:
       - "chapter9/**"
   pull_request:
+    branches:
+      - "test/**"
     paths:
       - "chapter9/**"
 
