--- a/.github/workflows/chapter9.yaml
+++ b/.github/workflows/chapter9.yaml
@@ -2,13 +2,11 @@ name: Run VRT
 
 on:
   push:
-    branches:
-      - "test/**"
     paths:
       - "chapter9/**"
   pull_request:
     branches:
-      - "test/**"
+      - "main"
     paths:
       - "chapter9/**"
 
